--- a/python/uwsgi/settings.ini
+++ b/python/uwsgi/settings.ini
@@ -13,13 +13,11 @@ module=django_project.wsgi
 socket=127.0.0.1:8002
 
 # app running settings
-procname-prefix-spaced=sawyer
 py-autoreload=1
 
 # app logging settings
-stats=/var/log/uwsgi/uwsgi.status 
-pidfile=/var/log/uwsgi/uwsgi.pid
-daemonize=/var/log/uwsgi/uwsgi.log
+pidfile=uwsgi.pid
+daemonize=uwsgi.log
 
 # uwsgi config settings
 # master
